--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>website 12</h4>
+            <h4><a href="#">website 12</a></h4>
         </div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
