--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/c_d.js"></script>
     <title>Website 12</title>
 </head>
-<body>
+<body onload="c_d()">
     <nav>
         <div class="logo">
-            <h4><a href="#">website 12</a></h4>
+            <h4><a href="index.html">website 12</a></h4>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Projects</a></li>
         </ul>
@@ -27,6 +28,17 @@
             </div>
         </div>
     </nav>
-    <footer>DieMoonD</footer>
+
+    <ul class="nav-links_m">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+    </ul>
+
+    <div class="main-content">
+        <p>This is test text</p>
+    </div>
+
+    <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
