--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
     <title>Website 12</title>
 </head>
 <body onload="c_d()">
-    <nav>
-        <div class="logo">
-            <h4><a href="index.html">website 12</a></h4>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-        </ul>
-        <div id="menu">
-            <div class="menu">
-                <div class="line line1"></div>
-                <div class="line line2"></div>
-                <div class="line line3"></div>
+    <header>
+        <nav>
+            <div class="logo">
+                <h4><a href="index.html">website 12</a></h4>
             </div>
-        </div>
-    </nav>
-
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+            <div id="menu">
+                <div class="menu">
+                    <div class="line line1"></div>
+                    <div class="line line2"></div>
+                    <div class="line line3"></div>
+                </div>
+            </div>
+        </nav>
+    </header>
     <ul class="nav-links_m">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
