--- a/index.html
+++ b/index.html
@@ -3,43 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="./js/menu.js"></script>
     <script src="./js/c_d.js"></script>
-    <title>Website 12</title>
+    <script src="js/menu.js"></script>
+    <title>Website 13</title>
 </head>
 <body onload="c_d()">
-    <header>
-        <nav>
-            <div class="logo">
-                <h4><a href="index.html">website 12</a></h4>
-            </div>
-            <ul class="nav-links">
+    <nav>
+        <h4>Website 13</h4>
+        <div class="n_c">
+            <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
             </ul>
-            <div id="menu">
-                <div class="menu">
-                    <div class="line line1"></div>
-                    <div class="line line2"></div>
-                    <div class="line line3"></div>
-                </div>
+        </div>
+        <div id="menu">
+            <div class="menu">
+                <div class="line l1"></div>
+                <div class="line l2"></div>
+                <div class="line l3"></div>
             </div>
-        </nav>
-    </header>
-    <ul class="nav-links_m">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-    </ul>
-
-    <div class="main-content">
-        <p>This is test text_005</p>
-    </div>
-
+        </div>
+    </nav>
+    <section class="sec1"><h1>This is my 13th website project</h1></section>
+    <section class="sec2"></section>
+    <section class="sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
