--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 <body onload="c_d()">
     <nav>
-        <h4>Website 13</h4>
+        <h4><a href="index.html">Website 13</a></h4>
         <div class="n_c">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
+                <li><a href="./pages/GameSettings.html">Game Settings</a></li>
             </ul>
         </div>
         <div id="menu">
@@ -27,9 +28,9 @@
             </div>
         </div>
     </nav>
-    <section class="sec1"><h1>This is my 13th website project</h1></section>
-    <section class="sec2"></section>
-    <section class="sec3"></section>
+    <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
+    <section id="content_s_2" class="home_p_sec2"></section>
+    <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
