--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/c_d.js"></script>
-    <script src="js/menu.js"></script>
+    <script src="./js/menu.js"></script>
     <title>Website 13</title>
 </head>
 <body onload="c_d()">
     <nav>
-        <h4><a href="index.html">Website 13</a></h4>
+        <h4><a href="#">Website 13</a></h4>
         <div class="n_c">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="./pages/GameSettings.html">Game Settings</a></li>
