--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/c_d.js"></script>
     <script src="./js/menu.js"></script>
