--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/c_d.js"></script>
     <script src="./js/menu.js"></script>
@@ -29,7 +29,7 @@
         </div>
     </nav>
     <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
-    <section id="content_s_2" class="home_p_sec2">TEST6</section>
+    <section id="content_s_2" class="home_p_sec2">TEST1</section>
     <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
