--- a/backup/index.html
+++ b/backup/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="./js/menu.js"></script>
     <script src="./js/c_d.js"></script>
-    <title>Website13</title>
+    <script src="./js/menu.js"></script>
+    <title>Website 13</title>
 </head>
 <body onload="c_d()">
-    <div id="nav">
-        <h4><a href="#">website 13</a></h4>
+    <nav>
+        <h4><a href="#">Website 13</a></h4>
         <div class="n_c">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -27,7 +27,7 @@
                 <div class="line l3"></div>
             </div>
         </div>
-    </div>
+    </nav>
     <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
     <section id="content_s_2" class="home_p_sec2">TEST1</section>
     <section id="content_s_3" class="home_p_sec3"></section>
