--- a/pages/GameSettings.html
+++ b/pages/GameSettings.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/wf.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../js/c_d.js"></script>
     <script src="../js/menu.js"></script>
-    <title>Website 13 / Game Settings</title>
+    <script src="../js/c_d.js"></script>
+    <title>Website13</title>
 </head>
 <body onload="c_d()">
-    <nav>
-        <h4><a href="../index.html">Website 13</a></h4>
+    <div id="nav">
+        <h4><a href="#">website 13</a></h4>
         <div class="n_c">
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="GameSettings.html">Game Settings</a></li>
+                <li><a href="#">Game Settings</a></li>
             </ul>
         </div>
         <div id="menu">
@@ -28,10 +27,8 @@
                 <div class="line l3"></div>
             </div>
         </div>
-    </nav>
-    <section id="content_s_1" class="Game_p_sec1">
-        <h1>Game Settings</h1>
-    </section>
+    </div>
+    <section id="content_s_1" class="Game_p_sec1"><h1>On this page is my Game Settings</h1></section>
     <section id="content_s_2" class="Game_p_sec2">
         <div class="s_con">
             <div class="s_list">
@@ -53,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section id="content_s_3" class="Game_p_sec3"></section>
+    <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
