--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     </div>
     <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
-    <section id="content_s_2" class="home_p_sec2"><h2>Test1</h2></section>
-    <section id="content_s_3" class="home_p_sec3"></section>
+    <section id="content_s_2" class="home_p_sec2"><h2></h2></section>
+    <section id="content_s_3" class="home_p_sec3"><h3></h3></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
