--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/scripts.js"></script>
     <title>Website13</title>
 </head>
 <body onload="c_d()">
@@ -28,8 +28,8 @@
         </div>
     </div>
     <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
-    <section id="content_s_2" class="home_p_sec2"><h2></h2></section>
-    <section id="content_s_3" class="home_p_sec3"><h3></h3></section>
+    <section id="content_s_2" class="home_p_sec2"></section>
+    <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
