--- a/pages/GameSettings.html
+++ b/pages/GameSettings.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../js/menu.js"></script>
-    <script src="../js/c_d.js"></script>
+    <script src="../js/scripts.js"></script>
     <title>Website13</title>
 </head>
 <body onload="c_d()">
@@ -50,7 +49,6 @@
             </div>
         </div>
     </section>
-    <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
 </body>
 </html>
