--- a/pages/GameSettings.html
+++ b/pages/GameSettings.html
@@ -8,14 +8,14 @@
     <script src="../js/scripts.js"></script>
     <title>Website13</title>
 </head>
-<body onload="c_d()">
+<body onload="c_d(),startTime()">
     <div id="nav">
-        <h4><a href="#">website 13</a></h4>
+        <h4><a href="../index.html">website 13</a></h4>
+        <div class="date" id="time"></div>
         <div class="n_c">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
                 <li><a href="#">Game Settings</a></li>
             </ul>
         </div>
