--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="./js/scripts.js"></script>
+    <script src="../js/scripts.js"></script>
     <title>Website13</title>
 </head>
 <body onload="c_d(),startTime()">
@@ -14,9 +14,9 @@
         <div class="date" id="time"></div>
         <div class="n_c">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="./pages/Projects.html">Projects</a></li>
-                <li><a href="./pages/GameSettings.html">Game Settings</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="./GameSettings.html">Game Settings</a></li>
             </ul>
         </div>
         <div id="menu">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <section id="content_s_1" class="home_p_sec1"><h1>This is my 13th website project</h1></section>
+    <section id="content_s_1" class="home_p_sec1"><h1>Here is some of my projects what i have made</h1></section>
     <section id="content_s_2" class="home_p_sec2"></section>
     <section id="content_s_3" class="home_p_sec3"></section>
     <footer><small><p1>Example Corporation &copy; Copyright</p1> <p1 id="year"></p1></small></footer>
