--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
         <div class="date" id="time"></div>
         <div class="n_c">
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="./GameSettings.html">Game Settings</a></li>
             </ul>
