--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="n_c">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="./pages/Projects.html">Projects</a></li>
-                <li><a href="./pages/GameSettings.html">Game Settings</a></li>
+                <li><a href="./Projects.html">Projects</a></li>
+                <li><a href="./GameSettings.html">Game Settings</a></li>
             </ul>
         </div>
         <div id="menu">
