--- a/Projects.html
+++ b/Projects.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
     <title>Website13</title>
 </head>
 <body onload="c_d(),startTime()">
     <div id="nav">
-        <h4><a href="#">website 13</a></h4>
+        <h4><a href="./index.html">website 13</a></h4>
         <div class="date" id="time"></div>
         <div class="n_c">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="Projects.html">Projects</a></li>
                 <li><a href="./GameSettings.html">Game Settings</a></li>
             </ul>
         </div>
