--- a/GameSettings.html
+++ b/GameSettings.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./Projects.html">Projects</a></li>
-                <li><a href="GameSettings.html">Game Settings</a></li>
+                <li><a href="">Game Settings</a></li>
             </ul>
         </div>
         <div id="menu">
